# power_of_words

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  config.py  pyproject.toml  run.py
app/: __init__.py  database.py
app/blueprints/: analytics.py  feeds.py  realtime_analysis.py  sources.py
app/filters/: custom_filters.py
app/models/: db_config.py  feed_db_filters.py  feed_sentiments.py  feeds.py  forms.py  sources.py
app/static/css/: main.css  selectize.css
app/static/js/: main.js  selectize.min.js
app/templates/: 404.html  layout.html
app/templates/elements/: chart_search_form.html  feed_item_sentiment_label.html  feeds_pagination.html  feeds_search_form.html  menu.html
app/templates/elements/charts/: sentiment_by_source.html  sentiment_over_time.html  word_cloud.html
app/templates/pages/: analytics.html  feeds.html  home.html  realtime_analysis.html  test.html
jobs/: feed_import_initiate.sh  init.py  move_sentiments.py
jobs/cleaners/: clean_data.py
jobs/daily/: rss_reader.py  rss_reader_old.py
libs/: database.py  functions.py  sentiment_analyzer.py  session.py
libs/db/: db_client.py  db_mapping.py
libs/pool_db/: session.py
tests/: main.py
