[tool.poetry]
name = "power-of-words"
version = "0.1.0"
description = ""
authors = ["Zoltan Pal <zoomyster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
sqlalchemy = "^2.0.29"
flask-cors = "^4.0.0"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
python-dateutil = "^2.9.0.post0"
feedparser = "^6.0.11"
nltk = "^3.8.1"
transformers = "^4.40.0"
pandas = "^2.2.2"
psycopg2 = "^2.9.9"
torch = "^2.4.0"
flask-session = "^0.8.0"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
warn_unused_configs = "True"
disallow_untyped_defs = "False"
ignore_missing_imports = "False"
exclude = [".venv", "localdev"]

[tool.pylint]
max-line-length = 120
# W0212: protected access
disable = ["W0212"]

[tool.pytest.ini_options]
python_files = "test_*.py"
norecursedirs = ".* tmp* __pycache__ alchemy"
testpaths = [
    "tests",
]
addopts = "--cov=. --cov-report=term-missing"


[tool.coverage.run]
omit = [
    "__init__.py",
    "config.py",
    "tests/*",
    "localdev/*"
]
